Fix text alignment due to font

--- a/doc/static/demo/style/style.css
+++ b/doc/static/demo/style/style.css
@@ -46,7 +46,7 @@
 }
 
 body, html {
-  font-family : "Montserrat", "Open Sans","Helvetica Neue",Helvetica,sans-serif;
+  font-family : sans-serif;
   color: #555;
   height: 100%;
   margin: 0;
